# rust-gl

./: .gitignore  Cargo.toml  README.md  TODO.md
shaders/: frag.glsl  grid_f.glsl  outline_f.glsl  outline_v.glsl  vertex.glsl
src/: camera.rs  lib.rs  log.rs  main.rs  mesh.rs  model.rs  shader.rs  ui.rs  utils.rs
src/imgui-glfw-support/: mod.rs
src/imgui-opengl-renderer/: mod.rs
src/ui/: ui.rs
