[package]
name = "rust-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
image = "0.24.6"
glm = "0.2.3"
glow = "0.12.1"
imgui-glow-renderer = "0.11.0"

[dependencies.imgui]
version = "0.11.0"
features = ["docking"]

