[package]
name = "rust-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
glad-gl = { path = "./3rdparty/glad-gl" }
image = "0.24.6"
glm = "0.2.3"
mint = "0.5.9"
anyhow = "1.0.71"
rfd = "0.11.3"

[dependencies.imgui]
version = "0.11.0"
features = ["docking"]

[dependencies.russimp]
version = "2.0.4"
features = ["prebuilt"]
